--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>-->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.18.3</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
